--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,21 @@
             app:bar_leftColor="@color/color_366be3"
             app:bar_leftIcon="@drawable/logo"
             app:bar_leftIconSize="@dimen/dp_25"
-            app:bar_rightIconSize="@dimen/dp_20"
-            app:bar_rightIcon="@drawable/ic_keyboard_arrow_right_black_24dp"
             app:bar_leftText="left"
             app:bar_lineSize="2dp"
             app:bar_rightColor="@color/color_366be3"
+            app:bar_rightIcon="@drawable/ic_keyboard_arrow_right_black_24dp"
+            app:bar_rightIconSize="@dimen/dp_20"
             app:bar_rightText="right" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp_10"
+            android:text="普通按钮" />
     </LinearLayout>
 
     <Button
