--- a/base/src/main/res/values/dimen.xml
+++ b/base/src/main/res/values/dimen.xml
@@ -47,4 +47,7 @@
     <dimen name="preview_margin">50dp</dimen>
     <dimen name="preview_land_margin">20dp</dimen>
     <dimen name="head_width">200dp</dimen>
+
+    <!-- 默认按钮的圆角大小 -->
+    <dimen name="button_round_size">5dp</dimen>
 </resources>
