--- a/app/src/main/res/layout/data_binding_test_view.xml
+++ b/app/src/main/res/layout/data_binding_test_view.xml
@@ -32,7 +32,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{()->model.onClickButton}"
-            android:text="@{model.isLoading" />
+            android:onClick="@{model::onClickButton}"
+            android:text="@{model.data.name}" />
     </LinearLayout>
 </layout>
